17.netpol-ns/netpol.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: netpol-ns
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: deny-all
  namespace: netpol-ns
spec:
  podSelector: {}
  policyTypes:
  - Ingress
  - Egress
